@@ -1,0 +1,8 @@
+using System;
+
+public class Driver
+{
+	public static void Main ()
+	{
+	}
+}
